# wow-sales-purchases

./: ER-WOW-SALES.drawio  Projektantrag.md  Projektdokumentation.md
backend/: crud.py  item_crud.py  item_service.py  main.py  models.py  purchase_crud.py  purchase_service.py  pyproject.toml  requirements.txt  sale_crud.py  sale_service.py  schemas.py
backend/resources/sqlite/: sales_db.db
backend/rest_api/: ItemService.py  crud.py  main.py
backend/rest_api/resources/: config.yml
backend/rest_api/resources/sqlite/: sales_db.db
frontend/: gui.py
