[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "rest_api"
version = "0.0.1"
authors = [
  { name="Marius Birk", email="marius.birk@openknowledge.de" },
      { name="Marjan Schneider", email="marjan.schneider@openknowledge.de" },
]
description = "A small rest api to get purchases and sales in WoW."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
